# nlp-100knocks

./: .gitignore  README.md  main.py  pyproject.toml
1章/: knock00.py  knock01.py  knock02.py  knock03.py  knock04.py  knock05.py  knock06.py  knock07.py  knock08.py  knock09.py
2章/: knock10.py  knock11.py  knock12.py  knock13.py  knock14.py  knock15.py  knock16.py  knock17.py  knock18.py  knock19.py  out_10.txt  out_11.txt  out_12.txt  out_13.txt  out_14.txt  out_16.txt  out_17.txt
2章/out_15/: split_aa  split_ab  split_ac  split_ad  split_ae  split_af  split_ag  split_ah  split_ai  split_aj
3章/: knock20.py  knock21.py  knock22.py  knock23.py  knock24.py  knock25.py  knock26.py  knock27.py  knock28.py  knock29.py
4章/code/: knock30.py  knock31.py  knock32.py  knock33.py  knock34.py  knock35.py  knock36.py  knock37.py  knock38.py  knock39.py
5章/code/: knock40.py  knock41.py  knock42.py  knock43.py  knock44.py  knock45.py  knock46.py  knock47.py  knock48.py  knock49.py  search_model.py
6章/code/: knock50.py  knock51.py  knock52.py  knock53.py  knock54.py  knock55.py  knock56.py  knock57.py  knock58.py  knock59.py
7章/code/: knock60.py  knock61.py  knock62.py  knock63.py  knock64.py  knock65.py  knock66.py  knock67.py  knock68.py  knock69_make_graph.py  knock69_make_model.py
