[project]
name = "nlp-100knocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets<4.0.0",
    "gdown>=5.2.0",
    "gensim>=4.4.0",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "spacy>=3.8.11",
]
